--- a/sistema/site/public/login.html
+++ b/sistema/site/public/login.html
@@ -46,7 +46,7 @@
         </div>
         <div class="title">Login</div>
         <div class="content">
-            <form action="#">
+            <form onsubmit="return false">
                 <div class="user-details">
                     <div class="input-box">
                         <span class="details">Email</span>
