quiz e ranking finalizado, fazendo ajustes

--- a/sistema/site/public/avaliarJogador.html
+++ b/sistema/site/public/avaliarJogador.html
@@ -8,7 +8,6 @@
     <title>Avaliação de Jogador</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/dashboards.css">
-    <script src="js/alerta.js"></script>
     <script src="js/sessao.js"></script>
     <link rel="stylesheet" href="css/avaliarJogador.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -26,20 +25,23 @@
                 <div class="menu-title">Bem-Vindo <span id="b_usuario">usuário</span></div>
 
                 <li class="item">
+                    <a href="votarJogador.html">Votar Jogador</a>
+                </li>
+                <!-- <li class="item">
                     <a href="avaliarJogador.html">Avaliar Jogador</a>
-                </li>
-                <li class="item">
-                    <a href="dashboard.html">Dashboard</a>
-                </li>
+                </li> -->
 
                 <li class="item">
-                    <a href="votarJogador.html">Votar Jogador</a>
+                    <a href="dashboard.html">Dashboard</a>
                 </li>
                 <li class="item">
                     <a href="quiz.html">Quiz</a>
                 </li>
                 <li class="item">
-                    <a onclick="limparSessao()" href="index.html">Sair</a>
+                    <a href="ranking.html">Ranking</a>
+                </li>
+                <li class="item">
+                    <a onclick="limparSessao()">Sair</a>
                 </li>
             </ul>
         </div>
@@ -817,7 +819,7 @@
                 Swal.fire({
                     icon: 'success',
                     title: 'Bom trabalho!',
-                    text: 'Publicação deletada com sucesso',
+                    text: 'Avaliação deletada com sucesso',
                     confirmButtonColor: '#1e26fd',
                     timer: 4500
                 }).then(() => {
