--- a/sistema/site/public/editarAvaliacaoJogador.html
+++ b/sistema/site/public/editarAvaliacaoJogador.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Editar</title>
     <link rel="stylesheet" href="css/editarAvaliacao.css" />
+    <script src="js/sessao.js"></script>
     <link rel="shortcut icon" href="assets/icon/rocket-league.svg" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Fontawesome CDN Link -->
@@ -22,20 +23,23 @@
                 <div class="menu-title">Bem-Vindo <span id="b_usuario">usuário</span></div>
 
                 <li class="item">
-                    <a href="avaliarJogador.html">Avaliar Jogador</a>
+                    <a href="votarJogador.html">Votar Jogador</a>
                 </li>
                 <li class="item">
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="avaliarJogador.html">Avaliar Jogador</a>
                 </li>
 
                 <li class="item">
-                    <a href="avaliarTime.html">Avaliar Time</a>
+                    <a href="dashboard.html">Dashboard</a>
                 </li>
                 <li class="item">
                     <a href="quiz.html">Quiz</a>
                 </li>
                 <li class="item">
-                    <a onclick="limparSessao()" href="index.html">Sair</a>
+                    <a href="ranking.html">Ranking</a>
+                </li>
+                <li class="item">
+                    <a onclick="limparSessao()">Sair</a>
                 </li>
             </ul>
         </div>
