--- a/sistema/site/public/dashboard.html
+++ b/sistema/site/public/dashboard.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
     <link rel="stylesheet" href="css/dash.css" />
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/dashboards.css">
-    <script src="js/alerta.js"></script>
     <script src="js/sessao.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="shortcut icon" href="assets/icon/rocket-league.svg" type="image/x-icon">
@@ -26,20 +23,23 @@
                 <div class="menu-title">Bem-Vindo <span id="b_usuario">usuário</span></div>
 
                 <li class="item">
-                    <a href="avaliarJogador.html">Avaliar Jogador</a>
+                    <a href="votarJogador.html">Votar Jogador</a>
                 </li>
                 <li class="item">
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="avaliarJogador.html">Avaliar Jogador</a>
                 </li>
 
                 <li class="item">
-                    <a href="votarJogador.html">Votar Jogador</a>
-                </li>
+                    <!-- <a href="dashboard.html">Dashboard</a>
+                </li> -->
                 <li class="item">
                     <a href="quiz.html">Quiz</a>
                 </li>
                 <li class="item">
-                    <a onclick="limparSessao()" href="index.html">Sair</a>
+                    <a href="ranking.html">Ranking</a>
+                </li>
+                <li class="item">
+                    <a onclick="limparSessao()">Sair</a>
                 </li>
             </ul>
         </div>
