--- a/sistema/site/public/index.html
+++ b/sistema/site/public/index.html
@@ -22,14 +22,14 @@
                     <a href="#">Inicial</a>
                 </li>
                 <li>
-                    <a href="sobre.html">Sobre</a>
+                    <a href="sobre.html">Sobre Mim</a>
                 </li>
                 <li>|</li>
                 <li>
-                    <a href="cadastro.html">Cadastro</a>
+                    <a href="login.html">Login</a>
                 </li>
                 <li>
-                    <a href="login.html">Login</a>
+                    <a href="cadastro.html">Cadastro</a>
                 </li>
             </ul>
         </div>
