--- a/sistema/site/public/quiz.html
+++ b/sistema/site/public/quiz.html
@@ -23,20 +23,23 @@
                 <div class="menu-title">Bem-Vindo <span id="b_usuario">usuário</span></div>
 
                 <li class="item">
-                    <a href="avaliarJogador.html">Avaliar Jogador</a>
-                </li>
-                <li class="item">
-                    <a href="dashboard.html">Dashboard</a>
-                </li>
-
-                <li class="item">
                     <a href="votarJogador.html">Votar Jogador</a>
                 </li>
                 <li class="item">
-                    <a href="#">Quiz</a>
+                    <a href="avaliarJogador.html">Avaliar Jogador</a>
+                </li>
+
+                <li class="item">
+                    <a href="dashboard.html">Dashboard</a>
+                </li>
+                <!-- <li class="item">
+                    <a href="quiz.html">Quiz</a>
+                </li> -->
+                <li class="item">
+                    <a href="ranking.html">Ranking</a>
                 </li>
                 <li class="item">
-                    <a onclick="limparSessao()" href="index.html">Sair</a>
+                    <a onclick="limparSessao()">Sair</a>
                 </li>
             </ul>
         </div>
