--- a/sistema/site/public/votarJogador.html
+++ b/sistema/site/public/votarJogador.html
@@ -8,7 +8,6 @@
     <title>Votação de Jogador</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/dashboards.css">
-    <script src="js/alerta.js"></script>
     <script src="js/sessao.js"></script>
     <link rel="stylesheet" href="css/votarJogador.css" />
     <link rel="shortcut icon" href="assets/icon/rocket-league.svg" type="image/x-icon">
@@ -25,21 +24,24 @@
             <ul class="menu-items">
                 <div class="menu-title">Bem-Vindo <span id="b_usuario">usuário</span></div>
 
+                <!-- <li class="item">
+                    <a href="votarJogador.html">Votar Jogador</a>
+                </li> -->
                 <li class="item">
                     <a href="avaliarJogador.html">Avaliar Jogador</a>
                 </li>
-                <li class="item">
-                    <a href="dashboard.html">Dashboard</a>
-                </li>
 
                 <li class="item">
-                    <a href="votarJogador.html">Votar Jogador</a>
+                    <a href="dashboard.html">Dashboard</a>
                 </li>
                 <li class="item">
                     <a href="quiz.html">Quiz</a>
                 </li>
                 <li class="item">
-                    <a onclick="limparSessao()" href="index.html">Sair</a>
+                    <a href="ranking.html">Ranking</a>
+                </li>
+                <li class="item">
+                    <a onclick="limparSessao()">Sair</a>
                 </li>
             </ul>
         </div>
